    (or created), just show alert with activated text.
22. Refresh player list each time 'Manage Players' is opened.
23. For mobile layout, show play/pause button in main toolbar for browse and
    queue pages.
24. More subtle current track highlight.
25. Don't use imageproxy for 192.168.*, 127.*, or *.local, HTTP/HTTPS image
    URLs - fixes display of ShairTunes covers.

0.9.7
-----
1. Refresh favourites list when rename a favourite.
2. When changing a favourite's URL, (attempt to) set icon, type, and hasitems.
3. If a player does not have 'power' attribute, then always assume its on.
4. Only show volume control if player reports 'digital_volume_control:1'
5. Add 'hasAlbums:1' to years query.
6. Reduce height of toolbar in mobile layout.
7. Make 'synced' part of 'playerStatus' in toolbar, so that UI is updated
   correctly on change.
8. Remove arrows from browse headers, and elide titles to indicate collapsed.
9. Hide list menus when scroll.

0.9.6
-----
1. For MAI biography, use in order of preference; first of trackartist_ids,
   first of artist_ids, trackartist_id, and finally artist_id.
2. For MAI lyrics, pass track_id, or artist and title if no track_id (or this is
   negative).
3. Only show info page when pressing now-playing nav button if have track
   details.
4. Fix list moving when select item near bottom.
5. Fix select/un-select menu item in queue having incorrect value.

0.9.5
-----
 1. When updating now-playing, prefer trackartist and trackartist_ids to artist
    and artist_ids if these are set.
 2. Use first of trackartist_ids for artist_id, if this is set.
 3. Fix removing a selection of favourites, when Material is set to order the
    favourites. Need to delete from the highest favourite ID to the lowest, but
    sorting can corrupt this order.
 4. Don't display loaded playlist name in queue.
 5. Use "playlistcontrol cmd:load" (etc) to load playlists.
 6. Colour repeat, shuffle, and power icons when active.